cmake_minimum_required(VERSION 3.29)
project(VeriYapilari C)

set(CMAKE_C_STANDARD 11)

add_executable(VeriYapilari CiftBagliDogrusalList.c)
add_executable(VY2 CiftBagliDaireselList.c)
add_executable(VY3 TekBagliDogrusalList.c)
add_executable(VY4 TekBagliDaireselList.c)
add_executable(VY5 StackDizisi.c)
add_executable(VY6 StackList.c)
add_executable(VY7 QueueDizisi.c)
add_executable(VY8 QueueList.c)
add_executable(VY9 BinaryTree.c)
add_executable(VY10 SortingAlg.c)
add_executable(VY11 HashTableLinkedList.c)
add_executable(VY12 Heap.c)
add_executable(VY13 GraphOrnegi.c)
add_executable(VY14 BellmanFordAlgoritmasi.c)
add_executable(VY15 LinearHashTable.c)
add_executable(VY16 AVLTree.c)
add_executable(VY17 DijkstraAlgoritmasi.c)
add_executable(VY18 Graphs.c)
add_executable(VY19 QuadraticHashTable.c)
add_executable(VYS SınavSoru.c)
add_executable(ozel ozels.c)
