cmake_minimum_required(VERSION 3.29)
project(VeriYapilari C)

set(CMAKE_C_STANDARD 11)

add_executable(VeriYapilari Linked-List/CiftBagliDogrusalList.c)
add_executable(VY2 Linked-List/CiftBagliDaireselList.c)
add_executable(VY3 Linked-List/TekBagliDogrusalList.c)
add_executable(VY4 Linked-List/TekBagliDaireselList.c)
add_executable(VY5 Stacks/StackDizisi.c)
add_executable(VY6 Stacks/StackList.c)
add_executable(VY7 Queues/QueueDizisi.c)
add_executable(VY8 Queues/QueueList.c)
add_executable(VY9 Trees/BinaryTree.c)
add_executable(VY10 Sorting-Algorithms/SortingAlg.c)
add_executable(VY11 Hash-tables/HashTableLinkedList.c)
add_executable(VY12 Heap/Heap.c)
add_executable(VY13 Graphs/GraphOrnegi.c)
add_executable(VY14 Searching-algorithms/BellmanFordAlgoritmasi.c)
add_executable(VY15 Hash-tables/LinearHashTable.c)
add_executable(VY16 Trees/AVLTree.c)
add_executable(VY17 Searching-algorithms/DijkstraAlgoritmasi.c)
add_executable(VY18 Graphs/Graphs.c)
add_executable(VY19 Hash-tables/QuadraticHashTable.c)
add_executable(VYS SınavSoru.c)

